@@ -1,14 +1,16 @@
 SET(INDEXER_SRCS
 ${CMAKE_CURRENT_SOURCE_DIR}/j2k_to_idxjp2.c
-${CMAKE_CURRENT_SOURCE_DIR}/cidx_manager.c
-${CMAKE_CURRENT_SOURCE_DIR}/cio_ext.c
+${CMAKE_CURRENT_SOURCE_DIR}/ext_libopenjpeg/cidx_manager.c
+${CMAKE_CURRENT_SOURCE_DIR}/ext_libopenjpeg/cio_ext.c
 ${CMAKE_CURRENT_SOURCE_DIR}/event_mgr_handler.c
 ${CMAKE_CURRENT_SOURCE_DIR}/idxjp2_manager.c
 ${CMAKE_CURRENT_SOURCE_DIR}/j2k_decoder.c
-${CMAKE_CURRENT_SOURCE_DIR}/phix_manager.c
-${CMAKE_CURRENT_SOURCE_DIR}/ppix_manager.c
-${CMAKE_CURRENT_SOURCE_DIR}/thix_manager.c
-${CMAKE_CURRENT_SOURCE_DIR}/tpix_manager.c
+${CMAKE_CURRENT_SOURCE_DIR}/ext_libopenjpeg/phix_manager.c
+${CMAKE_CURRENT_SOURCE_DIR}/ext_libopenjpeg/ppix_manager.c
+${CMAKE_CURRENT_SOURCE_DIR}/ext_libopenjpeg/thix_manager.c
+${CMAKE_CURRENT_SOURCE_DIR}/ext_libopenjpeg/tpix_manager.c
+${CMAKE_CURRENT_SOURCE_DIR}/ext_libopenjpeg/ext_j2k.c
+${CMAKE_CURRENT_SOURCE_DIR}/ext_libopenjpeg/ext_jp2.c
 )
 
 # Headers file are located here:
